admin: fix missing background in fullscreen mapping when scrolling
Close #434

--- a/admin/src/components/routes/ActionWrapper/Action.css
+++ b/admin/src/components/routes/ActionWrapper/Action.css
@@ -897,6 +897,7 @@ inherit the disabled style */
 	position: relative;
 	overflow: auto;
 	max-height: 100%;
+	background-color: var(--bg-gray);
 }
 
 .action .fullscreenTransformation .editorPanel {
